--- a/css/colourstyle.css
+++ b/css/colourstyle.css
@@ -1,10 +1,13 @@
-﻿@charset "utf-8";
+@charset "utf-8";
 /* CSS Document */
 body,ul,h2,h3,h4,form,input,textarea,select{padding:0;margin:0;}
 li{list-style:none;}
 img{border:none;}
 a{text-decoration:none;}
 a.hover{text-decoration:underline;}
+body{
+	background-color: #000000;
+}
 /*导航栏*/
 .nav{
 		position: fixed;
@@ -15,7 +18,6 @@ a.hover{text-decoration:underline;}
 		font-size: 14px;
 }
 .nav a{
-		//color: #FFF800;
                   color:white;
 }
 .nav:hover{
@@ -34,7 +36,6 @@ a.hover{text-decoration:underline;}
 		
 }
 .link1{
-		//background-color: #000000;
                   background-color:#313131;
 }
 .link1 a,.link2 a,.link3 a{
@@ -42,7 +43,6 @@ a.hover{text-decoration:underline;}
 }
 .link1>ul>li>a:hover{
 		color: #000000;
-		//background-color:#FFF800;
                   background-color:white;
 }
 .link2{
@@ -51,7 +51,6 @@ a.hover{text-decoration:underline;}
 }
 .link2>ul>li>a:hover{
 		color:#313131;
-		//background-color:#FFF800;
                   background-color:white;
 }
 .link3{
@@ -60,22 +59,18 @@ a.hover{text-decoration:underline;}
 }
 .link3>ul>li>a:hover{
 		color:#5D5D5D;
-		//background-color:#FFF800;
                   background-color:white;
 }
 .link1:hover{
 		height: 140px;
-		//border-bottom: 1px solid #FFF800; 
                   border-bottom: 1px solid #FFFFFF;
 }
 .link2:hover{
 		height: 120px;
-		//border-bottom: 1px solid #FFF800; 
                   border-bottom: 1px solid #FFFFFF; 
 }
 .link3:hover{
 		height: 110px;
-		//border-bottom: 1px solid #FFF800; 
                   border-bottom: 1px solid #FFFFFF;
 }
 	
@@ -86,7 +81,7 @@ a.hover{text-decoration:underline;}
 		text-align:center;
 		position:relative;
 }
-.link2>ul>li，.link3>ul>li{
+.link2>ul>li,.link3>ul>li{
 		width: 80px;
 		height: 36px;
 		line-height: 33px;
@@ -123,6 +118,8 @@ a.hover{text-decoration:underline;}
   box-shadow: 0 20px 30px rgba(0, 0, 0, 0.1);
   line-height: 0;
 	position: relative;
+	color: aliceblue;
+	font-family:"楷体";
 }
 .box > img {
   width: 200%;
@@ -143,7 +140,6 @@ a.hover{text-decoration:underline;}
 .box h1{
 	text-align: center;
 	margin-bottom: 30px;
-font-color：red;
 }
 .box p{
 	line-height:1.2;
