--- a/css/daohang.css
+++ b/css/daohang.css
@@ -1,14 +1,11 @@
 @charset "utf-8";
-/* CSS Document */
+/* CSS Document 
 body,ul,h2,h3,h4,form,input,textarea,select{padding:0;margin:0;}
 li{list-style:none;}
-img{border:none;}
+img{border:none;}*/
 a{text-decoration:none;}
 a.hover{text-decoration:underline;}
-/*å¯¼èˆªæ */
-body{
-	background-color: #000000;
-}
+/*µ¼º½À¸*/
 .nav{
 		position: fixed;
 		width: 80px;
@@ -18,6 +15,7 @@ body{
 		font-size: 14px;
 }
 .nav a{
+		//color: #FFF800;
                   color:white;
 }
 .nav:hover{
@@ -36,6 +34,7 @@ body{
 		
 }
 .link1{
+		//background-color: #000000;
                   background-color:#313131;
 }
 .link1 a,.link2 a,.link3 a{
@@ -43,6 +42,7 @@ body{
 }
 .link1>ul>li>a:hover{
 		color: #000000;
+		//background-color:#FFF800;
                   background-color:white;
 }
 .link2{
@@ -51,6 +51,7 @@ body{
 }
 .link2>ul>li>a:hover{
 		color:#313131;
+		//background-color:#FFF800;
                   background-color:white;
 }
 .link3{
@@ -59,18 +60,22 @@ body{
 }
 .link3>ul>li>a:hover{
 		color:#5D5D5D;
+		//background-color:#FFF800;
                   background-color:white;
 }
 .link1:hover{
 		height: 140px;
+		//border-bottom: 1px solid #FFF800; 
                   border-bottom: 1px solid #FFFFFF;
 }
 .link2:hover{
 		height: 120px;
+		//border-bottom: 1px solid #FFF800; 
                   border-bottom: 1px solid #FFFFFF; 
 }
 .link3:hover{
 		height: 110px;
+		//border-bottom: 1px solid #FFF800; 
                   border-bottom: 1px solid #FFFFFF;
 }
 	
@@ -81,7 +86,7 @@ body{
 		text-align:center;
 		position:relative;
 }
-.link2>ul>li,.link3>ul>li{
+.link2>ul>li£¬.link3>ul>li{
 		width: 80px;
 		height: 36px;
 		line-height: 33px;
@@ -100,61 +105,5 @@ body{
 		display:block;
 		position: absolute;
 		left: 0;	
-}
-/*ä¸»ä½“*/
-
-.ul1 {
-    border: 1px double #2d2d30;
-    box-shadow: #737373 8px 8px 5px;
-    overflow: auto;
-	overflow-y:scroll;
-	width: 80%;
-	height: 90vh;
-	margin-left:12%;
-	margin-top:2%;
-	position: relative;
-	color:aliceblue;
-	font-family: "æ¥·ä½“", "å®‹ä½“", "å¹¼åœ†";
-	
-}
-.ul1 li{
-    list-style: none;
-    font-size: 18px;
-	
-}
-img{
-	vertical-align: middle;
-}
-.red{
-    color: red;
-    font-weight: 400;
-    font-size: 20px;
-}
-.span1{
-
-    line-height: 30px;
-}
-.a1{
-    margin-left: 20px;
-}
-
-#submit{
-	float: left;
-	bottom: 10px;
-	margin-left:60px;
-	
-}
-.chongzhi{
-	float: left;
-	bottom: 10px;
-	margin-left: 20px;
-}
-.answer{
-	float: left;
-	bottom: 10px;
-	margin-left: 20px;
-}
-.red{
-	display: none;
 }
 
