--- a/css/colourstyle.css
+++ b/css/colourstyle.css
@@ -1,4 +1,4 @@
-@charset "utf-8";
+﻿@charset "utf-8";
 /* CSS Document */
 body,ul,h2,h3,h4,form,input,textarea,select{padding:0;margin:0;}
 li{list-style:none;}
@@ -8,99 +8,7 @@ a.hover{text-decoration:underline;}
 body{
 	background-color: #000000;
 }
-/*导航栏*/
-.nav{
-		position: fixed;
-		width: 80px;
-		top:40%;
-		margin-left: -60px;
-		text-align:center;
-		font-size: 14px;
-}
-.nav a{
-                  color:white;
-}
-.nav:hover{
-		-webkit-transform:translate(60px,0);
-		-webkit-transition-duration:1s;
-		-webkit-transition-timing-function:linear;
-		transform:translate(60px,0);
-		transition-duration:1s;
-		transition-timing-function:linear;
-}
-.link1,.link2,.link3{	
-		width: 80px;
-		height: 33px;
-		line-height: 33px;
-		
-		
-}
-.link1{
-                  background-color:#313131;
-}
-.link1 a,.link2 a,.link3 a{
-		padding: 2px 5px;
-}
-.link1>ul>li>a:hover{
-		color: #000000;
-                  background-color:white;
-}
-.link2{
-		
-                background-color:#5D5D5D;
-}
-.link2>ul>li>a:hover{
-		color:#313131;
-                  background-color:white;
-}
-.link3{
-		
-                background-color:#949494;
-}
-.link3>ul>li>a:hover{
-		color:#5D5D5D;
-                  background-color:white;
-}
-.link1:hover{
-		height: 140px;
-                  border-bottom: 1px solid #FFFFFF;
-}
-.link2:hover{
-		height: 120px;
-                  border-bottom: 1px solid #FFFFFF; 
-}
-.link3:hover{
-		height: 110px;
-                  border-bottom: 1px solid #FFFFFF;
-}
-	
-.link1>ul>li{
-		width: 80px;
-		height: 33px;
-		line-height: 33px;
-		text-align:center;
-		position:relative;
-}
-.link2>ul>li,.link3>ul>li{
-		width: 80px;
-		height: 36px;
-		line-height: 33px;
-		text-align:center;
-		position:relative;
-}
-.link1>ul,.link2>ul,.link3>ul{
-		display:none
-}
-.link1>ul>li,.link2>ul>li,.link3>ul>li{
-		width: 80px;
-		height: 33px;
-		line-height: 33px;
-}
-.link1:hover>ul,.link2:hover>ul,.link3:hover>ul{
-		display:block;
-		position: absolute;
-		left: 0;	
-}
+
 /*调色种类*/
 .container{
 	width: 90%;
@@ -119,7 +27,7 @@ body{
   line-height: 0;
 	position: relative;
 	color: aliceblue;
-	font-family:"楷体";
+	//font-family:"楷体";
 }
 .box > img {
   width: 200%;
@@ -134,17 +42,17 @@ body{
 	width: 30%;
 	height: 100%;
 	position: absolute;
-	top:0;
-	right: 0;
+	top:16%;
+        right:-1.5%;
 }
 .box h1{
 	text-align: center;
 	margin-bottom: 30px;
 }
 .box p{
-	line-height:1.2;
-	font-size: 18px;
-	letter-spacing:2px;
+	line-height:1.6;
+	font-size: 16px;
+	letter-spacing:1.3px;
 	vertical-align: middle;
 	margin-left: 10px;
 }
