--- a/css/daohang.css
+++ b/css/daohang.css
@@ -13,10 +13,11 @@ a.hover{text-decoration:underline;}
 		margin-left: -60px;
 		text-align:center;
 		font-size: 14px;
+		z-index: 999;
 }
 .nav a{
 		//color: #FFF800;
-                  color:white;
+                  color:#ffffff;
 }
 .nav:hover{
 		-webkit-transform:translate(60px,0);
@@ -26,7 +27,7 @@ a.hover{text-decoration:underline;}
 		transition-duration:1s;
 		transition-timing-function:linear;
 }
-.link1,.link2,.link3{	
+.link1,.link2,.link3,.link4{	
 		width: 80px;
 		height: 33px;
 		line-height: 33px;
@@ -37,7 +38,7 @@ a.hover{text-decoration:underline;}
 		//background-color: #000000;
                   background-color:#313131;
 }
-.link1 a,.link2 a,.link3 a{
+.link1 a,.link2 a,.link3 a,.link4 a{
 		padding: 2px 5px;
 }
 .link1>ul>li>a:hover{
@@ -52,7 +53,7 @@ a.hover{text-decoration:underline;}
 .link2>ul>li>a:hover{
 		color:#313131;
 		//background-color:#FFF800;
-                  background-color:white;
+                  background-color:#FFFFFF;
 }
 .link3{
 		
@@ -63,22 +64,36 @@ a.hover{text-decoration:underline;}
 		//background-color:#FFF800;
                   background-color:white;
 }
+.link4{
+		
+                  background-color:#C2C2C2;
+}
+.link4>ul>li>a:hover{
+		color:#5D5D5D;
+		//background-color:#FFF800;
+                  background-color:white;
+}
 .link1:hover{
 		height: 140px;
 		//border-bottom: 1px solid #FFF800; 
                   border-bottom: 1px solid #FFFFFF;
 }
 .link2:hover{
-		height: 120px;
+		height: 110px;
 		//border-bottom: 1px solid #FFF800; 
                   border-bottom: 1px solid #FFFFFF; 
 }
 .link3:hover{
-		height: 110px;
+		height:110px;
 		//border-bottom: 1px solid #FFF800; 
                   border-bottom: 1px solid #FFFFFF;
 }
-	
+.link4:hover{
+		height:90px;
+		//border-bottom: 1px solid #FFF800; 
+                  border-bottom: 1px solid #FFFFFF;
+                padding-top:60%;
+}	
 .link1>ul>li{
 		width: 80px;
 		height: 33px;
@@ -86,22 +101,22 @@ a.hover{text-decoration:underline;}
 		text-align:center;
 		position:relative;
 }
-.link2>ul>li£¬.link3>ul>li{
+.link2>ul>li£¬.link3>ul>li£¬.link4>ul>li{
 		width: 80px;
 		height: 36px;
 		line-height: 33px;
 		text-align:center;
 		position:relative;
 }
-.link1>ul,.link2>ul,.link3>ul{
+.link1>ul,.link2>ul,.link3>ul,.link4>ul{
 		display:none
 }
-.link1>ul>li,.link2>ul>li,.link3>ul>li{
+.link1>ul>li,.link2>ul>li,.link3>ul>li,.link4>ul>li{
 		width: 80px;
 		height: 33px;
 		line-height: 33px;
 }
-.link1:hover>ul,.link2:hover>ul,.link3:hover>ul{
+.link1:hover>ul,.link2:hover>ul,.link3:hover>ul,.link4:hover>ul{
 		display:block;
 		position: absolute;
 		left: 0;	
