--- a/css/structure-test.css
+++ b/css/structure-test.css
@@ -1,130 +1,92 @@
-@charset "utf-8";
+﻿@charset "utf-8";
 /* CSS Document */
 body,ul,h2,h3,h4,form,input,textarea,select{padding:0;margin:0;}
 li{list-style:none;}
 img{border:none;}
 a{text-decoration:none;}
 a.hover{text-decoration:underline;}
-/*导航栏*/
 body{
+    
+}
+body{
+	padding:0;
+	margin: 0;
+		position: relative;
 	background-color: #000000;
-}
-.nav{
-		position: fixed;
-		width: 80px;
-		top:40%;
-		margin-left: -60px;
-		text-align:center;
-		font-size: 14px;
-}
-.nav a{
-                  color:white;
-}
-.nav:hover{
-		-webkit-transform:translate(60px,0);
-		-webkit-transition-duration:1s;
-		-webkit-transition-timing-function:linear;
-		transform:translate(60px,0);
-		transition-duration:1s;
-		transition-timing-function:linear;
-}
-.link1,.link2,.link3{	
-		width: 80px;
-		height: 33px;
-		line-height: 33px;
-		
-		
-}
-.link1{
-                  background-color:#313131;
-}
-.link1 a,.link2 a,.link3 a{
-		padding: 2px 5px;
-}
-.link1>ul>li>a:hover{
-		color: #000000;
-                  background-color:white;
-}
-.link2{
-		
-                background-color:#5D5D5D;
-}
-.link2>ul>li>a:hover{
-		color:#313131;
-                  background-color:white;
-}
-.link3{
-		
-                background-color:#949494;
-}
-.link3>ul>li>a:hover{
-		color:#5D5D5D;
-                  background-color:white;
-}
-.link1:hover{
-		height: 140px;
-                  border-bottom: 1px solid #FFFFFF;
-}
-.link2:hover{
-		height: 120px;
-                  border-bottom: 1px solid #FFFFFF; 
-}
-.link3:hover{
-		height: 110px;
-                  border-bottom: 1px solid #FFFFFF;
-}
+	}
 	
-.link1>ul>li{
-		width: 80px;
-		height: 33px;
-		line-height: 33px;
-		text-align:center;
-		position:relative;
-}
-.link2>ul>li,.link3>ul>li{
-		width: 80px;
-		height: 36px;
-		line-height: 33px;
-		text-align:center;
-		position:relative;
-}
-.link1>ul,.link2>ul,.link3>ul{
-		display:none
-}
-.link1>ul>li,.link2>ul>li,.link3>ul>li{
-		width: 80px;
-		height: 33px;
-		line-height: 33px;
-}
-.link1:hover>ul,.link2:hover>ul,.link3:hover>ul{
-		display:block;
-		position: absolute;
-		left: 0;	
-}
 /*主体*/
-
-.ul1 {
-    border: 1px double #2d2d30;
-    box-shadow: #737373 8px 8px 5px;
-    overflow: auto;
-	overflow-y:scroll;
-	width: 80%;
-	height: 90vh;
-	margin-left:12%;
-	margin-top:2%;
-	position: relative;
-	color:aliceblue;
+.win{
+	//width:900px;
+        width:80%;
+	height:500px;
+	border:1px solid #ccc;
+	margin:20px auto;
+        //margin-top:7%;
+	position:absolute;
+	//right: 130px;
+	right:8%;
+        overflow: hidden;
+	background-color:#8198A7;
+	box-shadow: #868686 7px 8px 5px;
+}
+.title{
+	width:100%;height:30px;background:#eee;position: relative;
+}
+.title a{
+	/*padding:0 30px;*/width:20%;height:100%;float:left;text-align: center;line-height: 15px;font-size: 15px;color:#5D5D5D;text-decoration: none;position: relative;z-index: 1;
+}
+.title .float{
+	width:20%;height:100%;background: #5D5D5D;position: absolute;
+}
+.box{
+	width:100%;height:270px;position: relative;
 	font-family: "楷体", "宋体", "幼圆";
 	
 }
-.ul1 li{
-    list-style: none;
-    font-size: 18px;
+.box div{
+	position: absolute;
+	left:-100%;
+	color:#ffffff;
 	
 }
-img{
+	img{
 	vertical-align: middle;
 }
+.question1{
+	position: absolute;
+	//top:60px;
+	font-size: 20px;
+	line-height:34px;
+	//padding-left: 320px;
+       
+	top:40%;
+        padding-left:35%;
+	}
+.question3{
+	position: absolute;
+	//top:60px;
+        top:40%;
+	font-size: 20px;
+	line-height:34px;
+	//padding-left: 280px;
+        padding-left:30%;
+}
+.question2,.question4,.question5{
+	position: absolute;
+	top:10px;
+	font-size: 20px;
+	//padding-left: 120px;
+	padding-left:5%;
+	}
+	
+.rightB{
+	width:50px;height:70px;font-size: 20px;color:#fff;background: rgba(0,0,0,0.5);position: absolute;right:0;top:45%;line-height:70px;text-align: center;cursor: pointer;display: none;
+}
+.leftB{
+	width:50px;height:70px;font-size: 20px;color:#fff;background: rgba(0,0,0,0.5);position: absolute;left:0;top:45%;line-height:70px;text-align: center;cursor: pointer;display: none;
+}
+
 .red{
     color: red;
     font-weight: 400;
@@ -141,20 +103,16 @@ img{
 #submit{
 	float: left;
 	bottom: 10px;
-	margin-left:60px;
+	margin-left:45%;
+	margin-top: 540px;
 	
-}
-.chongzhi{
-	float: left;
-	bottom: 10px;
-	margin-left: 20px;
 }
 .answer{
 	float: left;
 	bottom: 10px;
-	margin-left: 20px;
+	margin-left: 45px;
+	margin-top: 540px;
 }
 .red{
 	display: none;
 }
-
