--- a/css/structure-test.css
+++ b/css/structure-test.css
@@ -14,20 +14,111 @@ body{
 		position: relative;
 	background-color: #000000;
 	}
+	/*导航栏*/
+	.nav{
+		position: absolute;
+		position: fixed;
+		width: 80px;
+		top:40%;
+		margin-left: -60px;
+		text-align:center;
+		vertical-align: middle;
+		font-size: 14px;
+}
+.nav a{
+                  color:white;
+}
+.nav:hover{
+		-webkit-transform:translate(60px,0);
+		-webkit-transition-duration:1s;
+		-webkit-transition-timing-function:linear;
+		transform:translate(60px,0);
+		transition-duration:1s;
+		transition-timing-function:linear;
+}
+.link1,.link2,.link3{	
+		width: 80px;
+		height: 33px;
+		line-height: 33px;
+		
+		
+}
+.link1{
+                  background-color:#313131;
+}
+.link1 a,.link2 a,.link3 a{
+		padding: 2px 5px;
+}
+.link1>ul>li>a:hover{
+		color: #000000;
+                  background-color:white;
+}
+.link2{
+		
+                background-color:#5D5D5D;
+}
+.link2>ul>li>a:hover{
+		color:#313131;
+                  background-color:white;
+}
+.link3{
+		
+                background-color:#949494;
+}
+.link3>ul>li>a:hover{
+		color:#5D5D5D;
+                  background-color:white;
+}
+.link1:hover{
+		height: 140px;
+                  border-bottom: 1px solid #FFFFFF;
+}
+.link2:hover{
+		height: 120px;
+                  border-bottom: 1px solid #FFFFFF; 
+}
+.link3:hover{
+		height: 110px;
+                  border-bottom: 1px solid #FFFFFF;
+}
 	
+.link1>ul>li{
+		width: 80px;
+		height: 33px;
+		line-height: 33px;
+		text-align:center;
+		position:relative;
+}
+.link2>ul>li,.link3>ul>li{
+		width: 80px;
+		height: 36px;
+		line-height: 33px;
+		text-align:center;
+		position:relative;
+}
+.link1>ul,.link2>ul,.link3>ul{
+		display:none
+}
+.link1>ul>li,.link2>ul>li,.link3>ul>li{
+		width: 80px;
+		height: 33px;
+		line-height: 33px;
+}
+.link1:hover>ul,.link2:hover>ul,.link3:hover>ul{
+		display:block;
+		position: absolute;
+		left: 0;	
+}
 /*主体*/
 .win{
-	//width:900px;
-        width:80%;
+	width:900px;
 	height:500px;
 	border:1px solid #ccc;
 	margin:20px auto;
-        //margin-top:7%;
 	position:absolute;
-	//right: 130px;
-	right:8%;
-        overflow: hidden;
-	background-color:#8198A7;
+	right: 50px;
+	overflow: hidden;
+	background-color:#9F9F9F;
 	box-shadow: #868686 7px 8px 5px;
 }
 .title{
@@ -47,7 +138,7 @@ body{
 .box div{
 	position: absolute;
 	left:-100%;
-	color:#ffffff;
+	color:#FFFFFF;
 	
 }
 	img{
@@ -55,29 +146,24 @@ body{
 }
 .question1{
 	position: absolute;
-	//top:60px;
+	top:60px;
 	font-size: 20px;
 	line-height:34px;
-	//padding-left: 320px;
-       
-	top:40%;
-        padding-left:35%;
+	padding-left: 320px;
 	}
 .question3{
 	position: absolute;
-	//top:60px;
-        top:40%;
+	top:60px;
 	font-size: 20px;
 	line-height:34px;
-	//padding-left: 280px;
-        padding-left:30%;
+	padding-left: 280px;
 }
 .question2,.question4,.question5{
 	position: absolute;
 	top:10px;
 	font-size: 20px;
-	//padding-left: 120px;
-	padding-left:5%;
+	padding-left: 120px;
+	
 	}
 	
 .rightB{
@@ -103,7 +189,7 @@ body{
 #submit{
 	float: left;
 	bottom: 10px;
-	margin-left:45%;
+	margin-left:42%;
 	margin-top: 540px;
 	
 }
