--- a/css/daohang.css
+++ b/css/daohang.css
@@ -1,4 +1,4 @@
-@charset "utf-8";
+﻿@charset "utf-8";
 /* CSS Document 
 body,ul,h2,h3,h4,form,input,textarea,select{padding:0;margin:0;}
 li{list-style:none;}
@@ -90,7 +90,6 @@ a.hover{text-decoration:underline;}
 }
 .link4:hover{
 		height:90px;
-		
                   border-bottom: 1px solid #FFFFFF;
                 padding-top:60%;
 }	
