--- a/css/main-test.css
+++ b/css/main-test.css
@@ -26,7 +26,7 @@ body{
         color:#ffffff;
 	font-family: "楷体", "宋体", "幼圆";
         background-color:#9F9F9F;
-	
+	background-color:#949494;
 }
 .ul1 li{
     list-style: none;
