--- a/css/structure-test.css
+++ b/css/structure-test.css
@@ -119,6 +119,8 @@ body{
 	right: 50px;
 	overflow: hidden;
 	background-color:#9F9F9F;
+        background-color:#313131;
+
 	box-shadow: #868686 7px 8px 5px;
 }
 .title{
