--- a/css/PS-structure-video.css
+++ b/css/PS-structure-video.css
@@ -6,15 +6,21 @@ img{border:none;}
 a{text-decoration:none;}
 a.hover{text-decoration:underline;}
 body{
+	margin:0;
+	padding:0;
+	width:100%;
+	height:100%;
 	background-color: #000000;
 }
-
 .container{
 	width:80%;
 	height:90vh;
-	margin-left:12%;
-	margin-top:2%;
-	//border: 10px solid #ffffff;
+	position:fixed;
+	left: 0;
+	top: 0;
+	bottom: 0;
+	right: 0;
+	margin: auto;
 }
 .container:focus{
 
