--- a/css/PS-structure-video.css
+++ b/css/PS-structure-video.css
@@ -1,31 +1,45 @@
-﻿@charset "utf-8";
+@charset "utf-8";
 /* CSS Document */
 body,ul,h2,h3,h4,form,input,textarea,select{padding:0;margin:0;}
 li{list-style:none;}
 img{border:none;}
 a{text-decoration:none;}
 a.hover{text-decoration:underline;}
+a:focus {  outline:none;   -moz-outline:none;}
+*:focus { outline: none; }
+html{
+	width: 100%;
+    height: 100%;
+}
+
 body{
-	margin:0;
-	padding:0;
-	width:100%;
-	height:100%;
 	background-color: #000000;
+	background-size:100% 100% ;
 }
 .container{
-	width:80%;
-	height:90vh;
-	position:fixed;
-	left: 0;
-	top: 0;
-	bottom: 0;
-	right: 0;
-	margin: auto;
+	width:980px;
+	height:570px;
+	position: absolute;
+	top:50%;
+	margin-top: -285px;
+	left: 50%;
+	margin-left: -490px;
 }
 .container:focus{
-
-    border:none;
-
+	border:none;
     outline:none;
+}
 
+.Back{
+	position: absolute;
+	bottom: 10%;
+	right:4px;
+	display: block;
+	width:120px;
+	height: 45px;
+	line-height: 45px;
+	text-align: center;
+	background-color:#236194;
+	color: aliceblue;
+	
 }
