--- a/css/structure-test.css
+++ b/css/structure-test.css
@@ -1,91 +1,90 @@
-﻿@charset "utf-8";
+@charset "utf-8";
 /* CSS Document */
 body,ul,h2,h3,h4,form,input,textarea,select{padding:0;margin:0;}
 li{list-style:none;}
 img{border:none;}
 a{text-decoration:none;}
 a.hover{text-decoration:underline;}
-body{
-    
+a:focus {  outline:none;   -moz-outline:none;}
+*:focus { outline: none; }
+html{
+	width: 100%;
+	height: 100%;
 }
 body{
-	padding:0;
-	margin: 0;
-		position: relative;
-	background-color: #000000;
+	width: 100%;
+	height: 100%;
+	position: relative;
+	background-image:url(" ../imgs/testbackground2.jpg");
+	background-size:100% 100% ;
 	}
-/*主体*/
-body{
-margin:0;
-padding:0;
-width:100%;
-height:100%;
-	background-color: #000000;
-}
 .container{
-	width:1000px;
+	opacity:0.8;
+	width: 950px;
 	height: 600px;
-	position:fixed;
-	left: 0;
-	top: 0;
-	bottom: 0;
-	right: 0;
-	margin: auto;
-	
+	position:absolute;
+	top:50%;
+	margin-top: -300px;
+	left: 50%;
+	margin-left: -475px;
 }
 .win{
-	width:900px;
-	height:500px;
-	border:1px solid #ccc;
-	margin:20px auto;
+	width:650px;
+	height:430px;
+	border-radius: 20px;
 	position:absolute;
-	right: 50px;
+	top:50%;
+	margin-top: -225px;
+	left: 50%;
+	margin-left: -325px;
 	overflow: hidden;
-	background-color:#9F9F9F;
-	box-shadow: #868686 7px 8px 5px;
+	background-color:#FFFFFF;
 }
 .title{
-	width:100%;height:30px;background:#eee;position: relative;
+	width:100%;height:30px;background:#eee;position: relative;border-bottom: 4px solid #000000;
+	
 }
 .title a{
-	/*padding:0 30px;*/width:20%;height:100%;float:left;text-align: center;line-height: 15px;font-size: 15px;color:#5D5D5D;text-decoration: none;position: relative;z-index: 1;
+	/*padding:0 30px;*/width:20%;height:100%;float:left;text-align: center;line-height: 24px;font-size: 24px;color:#5D5D5D;text-decoration: none;position: relative;z-index: 1;
 }
 .title .float{
-	width:20%;height:100%;background: #5D5D5D;position: absolute;
+	width:20%;height:100%;background:#000000;position: absolute;
 }
 .box{
 	width:100%;height:270px;position: relative;
-	font-family: "楷体", "宋体", "幼圆";
+	
 	
 }
 .box div{
 	position: absolute;
 	left:-100%;
-	color:#FFFFFF;
+	color:#000000;
 	
 }
-	img{
+img{
 	vertical-align: middle;
+	width:150px;
+	height:100px;
 }
 .question1{
 	position: absolute;
 	top:60px;
 	font-size: 20px;
 	line-height:34px;
-	padding-left: 320px;
+	padding-left: 220px;
 	}
 .question3{
 	position: absolute;
 	top:60px;
 	font-size: 20px;
 	line-height:34px;
-	padding-left: 280px;
+	padding-left: 170px;
 }
 .question2,.question4,.question5{
 	position: absolute;
-	top:10px;
+	top:60px;
 	font-size: 20px;
-	padding-left: 120px;
+	padding-left: 90px;
 	
 	}
 	
@@ -111,17 +110,18 @@ height:100%;
 
 #submit{
 	float: left;
-	position:absolute;
-	bottom: 25px;
-	margin-left:380px;	
+	bottom: 10px;
+	margin-left:34%;
+	margin-top: 520px;
+	border-radius: 16px;
+	
 }
 .answer{
 	float: left;
-	position:absolute;
-	bottom: 25px;
-	margin-left: 500px;
-	
-	
+	bottom: 10px;
+	margin-left: 130px;
+	margin-top: 520px;
+	border-radius: 16px;
 }
 .red{
 	display: none;
