--- a/album/css/style.css
+++ b/album/css/style.css
@@ -59,7 +59,7 @@ position:absolute;
 height:130px; width:460px; height:306px;
 	position:absolute;
 		background-color:rgba(255, 255, 255, .75);
-		border:10px solid rgba(255, 255, 255, .5);
+		/*border:10px solid rgba(255, 255, 255, .5);*/
 		color:aqua;
 		font-size:72px;
 		left:50%;
