--- a/css/PS-structure-video.css
+++ b/css/PS-structure-video.css
@@ -4,26 +4,32 @@ body,ul,h2,h3,h4,form,input,textarea,select{padding:0;margin:0;}
 li{list-style:none;}
 img{border:none;}
 a{text-decoration:none;}
-a.hover{text-decoration:underline;}
 a:focus {  outline:none;   -moz-outline:none;}
 *:focus { outline: none; }
+@font-face{
+	font-family:"HYZHONGXIUTIJ";
+	src:url("../font/HYZHONGXIUTIJ.TTF");
+}
 html{
 	width: 100%;
     height: 100%;
 }
 
 body{
-	background-color: #000000;
+	width: 100%;
+	height: 100%;
+	position: relative;
+	background-image:url("../imgs/bg.jpg");
 	background-size:100% 100% ;
 }
 .container{
-	width:980px;
+	width:900px;
 	height:570px;
 	position: absolute;
 	top:50%;
 	margin-top: -285px;
-	left: 50%;
-	margin-left: -490px;
+	left: 4%;
+	
 }
 .container:focus{
 	border:none;
@@ -32,8 +38,8 @@ body{
 
 .Back{
 	position: absolute;
-	bottom: 10%;
 	right:4px;
+	bottom: 20px;
 	display: block;
 	width:120px;
 	height: 45px;
@@ -42,4 +48,9 @@ body{
 	background-color:#236194;
 	color: aliceblue;
 	
+}
+.Back:hover{
+	background-color:#236194;
+	color: aliceblue;
+	text-decoration:none;
 }
