--- a/css/colourstyle-test.css
+++ b/css/colourstyle-test.css
@@ -4,9 +4,12 @@ body,ul,h2,h3,h4,form,input,textarea,select{padding:0;margin:0;}
 li{list-style:none;}
 img{border:none;}
 a{text-decoration:none;}
-a.hover{text-decoration:underline;}
 a:focus {  outline:none;   -moz-outline:none;}
 *:focus { outline: none; }
+@font-face{
+	font-family:"HYZHONGXIUTIJ";
+	src:url("../font/HYZHONGXIUTIJ.TTF")
+}
 html{
 	width: 100%;
 	height: 100%;
@@ -67,14 +70,14 @@ body{
 		width:150px;
 	height:100px;
 }
-.question1{
+.question1,.question5{
 	position: absolute;
 	top:60px;
 	font-size: 20px;
 	line-height:34px;
-	padding-left: 220px;
-	}
-.question3,.question4,.question5{
+	padding-left: 150px;
+}
+.question3,.question4{
 	position: absolute;
 	top:60px;
 	font-size: 20px;
@@ -85,7 +88,7 @@ body{
 	position: absolute;
 	top:60px;
 	font-size: 20px;
-	padding-left: 70px;
+	padding-left: 90px;
 	
 	}
 	
