--- a/css/colourstyle-tool.css
+++ b/css/colourstyle-tool.css
@@ -4,9 +4,12 @@ body,ul,h2,h3,h4,form,input,textarea,select{padding:0;margin:0;}
 li{list-style:none;}
 img{border:none;}
 a{text-decoration:none;}
-a.hover{text-decoration:underline;}
 a:focus {  outline:none;   -moz-outline:none;}
 *:focus { outline: none; }
+@font-face{
+	font-family:"HYZHONGXIUTIJ";
+	src:url("../font/HYZHONGXIUTIJ.TTF")
+}
 html{
 	width: 100%;
 	height: 100%;
@@ -26,17 +29,19 @@ body{
 	margin-top: -300px;
 	left: 50%;
 	margin-left: -475px;
+	z-index:2;
 	
 }
 .top{
 	text-align: center;
 	color: #EBEBEB;
 }
-.container ul,li{
+.my{
 	float: left;
 }
 
 .tiao{
+	float: left;
 	width:80px;
 	height: 2px;
 	background-color:  #EBEBEB;
@@ -71,9 +76,20 @@ body{
 			z-index: 2; 
 			top: 200px; 
 			color: #fff;
-	
+			text-decoration: none;
 		}
-
+.arrow:hover{
+	text-decoration: none;
+	color: #fff;
+}
+.arrow:visited{
+	text-decoration: none;
+	color: #fff;
+}
+.arrow:link{
+	text-decoration: none;
+	color: #fff;
+}
 .container:hover .arrow{
 	background-color:#236194;
 	opacity: 0.8;
@@ -81,22 +97,24 @@ body{
 #prev { left: 10px;}
 #next { right: 10px;}
 
-.kind{
-	color: #EBEBEB;
+#kind{
+	color:#EBEBEB;
 	width: 760px;
 	font-size: 25px;
 	letter-spacing: 4px;
 	margin-top: 40px;
 	margin-left: 100px;
+	
 }
 
-.info{
+#info{
+	
 	width: 800px;
 	height: 300px;
 	margin-top:20px;
 	margin-left: 70px;
 }
-.info li{
+#info li{
 	opacity: 0.9;
 	width: 240px;
 	height: 340px;
@@ -104,17 +122,18 @@ body{
 	background-color:#EAEAEA;
 	border-radius: 25px;
 }
-.info li:hover{
+#info li:hover{
 	background-color:#FFFFFF;
 	opacity:1;
 }
 
-.info li .imgs{
+#info li .imgs{
 	margin-top: 20px;
+	margin-bottom: 10px;
 	text-align: center;
 	
 }
-.info li p{
+#info li p{
 	width: 200px;
 	margin-left: 25px;
 	font-size: 15px;
