--- a/css/colourstyle.css
+++ b/css/colourstyle.css
@@ -1,90 +1,83 @@
-﻿@charset "utf-8";
+@charset "utf-8";
 /* CSS Document */
 body,ul,h2,h3,h4,form,input,textarea,select{padding:0;margin:0;}
 li{list-style:none;}
 img{border:none;}
 a{text-decoration:none;}
 a.hover{text-decoration:underline;}
-body{
-	background-color: #000000;
-}
-
-/*调色种类*/
+a:focus {  outline:none;   -moz-outline:none;}
+*:focus { outline: none; }
 .container{
-	width: 90%;
-	height: 96vh;
-	display: flex;
-	box-sizing: border-box;
-	position:fixed;
-	left: 0;
-	top: 0;
-	bottom: 0;
-	right: 0;
-	margin: auto;
-}
-.box {
-  flex: 1;
-  overflow: hidden;
-  transition: .5s;
-  margin: 0 1%;
-  box-shadow: 0 20px 30px rgba(0, 0, 0, 0.1);
-  line-height: 0;
-	position: relative;
-	color: aliceblue;
-	//font-family:"楷体";
-}
-.box > img {
-  width: 200%;
-  height: calc(100% - 10vh);
-  -o-object-fit: none;
-     object-fit: none;
-  transition: .5s;
-}
-
-.box>.info{
-	display: none;
-	width: 30%;
-	height: 100%;
 	position: absolute;
-	top:16%;
-        right:-1.5%;
-}
-.box h1{
-	text-align: center;
-	margin-bottom: 30px;
-}
-.box p{
-	line-height:1.6;
-	font-size: 16px;
-	letter-spacing:1.3px;
-	vertical-align: middle;
-	margin-left: 10px;
-}
-.box > .title {
-  font-size: 3.8vh;
-  display: block;
-  text-align: center;
-  height: 10vh;
-  line-height: 2.6;
-}
-.box:hover {
-  flex: 1 1 50%;
+	width: 100%;
+	height: 100%;
+	right:0;
+	overflow: hidden;
+	z-index: 2;
 	
 }
-@-webkit-keyframes fadenum{ /*设置内容由隐藏变为显示*/
-
-    0%{opacity: 0;}
-
-    100%{opacity: 1;}
-
+.container ul{
+	position: absolute;
+	right: 0;
+	width: 100%;
+	height: 100%;
 }
-.box:hover>.info{
-	display: block;	
-	-webkit-animation:fadenum 2.5s linear;
+.container li{
+	width:100%;
+	height: 25%;
+	overflow: hidden;
+	-webkit-transition:all .1s linear;-moz-transition:all .1s linear;-o-transition:all .1s linear;-ms-transition:all .1s linear;transition:all .1s linear
+	
+}
+.container li *{-webkit-transition:all .1s linear;-moz-transition:all .1s linear;-o-transition:all .1s linear;-ms-transition:all .1s linear;transition:all .1s linear}
+
+.container li a{
+	display: block;
+	width: 100%;
+	height: 100%;
+	position: relative;
+	overflow: hidden;
+}
+.container .one,.three{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 55%;
+	overflow: hidden;
 }
 
-.box:hover > img {
-  width: 70%;
-  height: 100%;
+
+.container .info h1{
+	font-size: 70px;
+	text-align: center;
+	margin-top: 48px;
+	
+}
+.container .p1{
+	line-height:1.2;
+	font-size: 17px;
+	letter-spacing:2px;
+	vertical-align: middle;
+	overflow: hidden;
+	font-family: "楷体", "宋体", "幼圆";
+	width: 86%;
+	margin-left: 38px;
+	margin-top: 38px;
 }
 
+.container .p2{
+	line-height:1.2;
+	font-size: 17px;
+	letter-spacing:2px;
+	vertical-align: middle;
+	overflow: hidden;
+	font-family: "楷体", "宋体", "幼圆";
+	width: 70%;
+	margin-left:80px;
+	margin-top: 38px;
+}
+
+.container ul *{transition:all linear .1s;}
+.container .big{height: 50%;}
+.container .big .p1{margin-top: 15px;}
+.container li.big h1{font-size: 50px;text-align: center;margin-top: 20px;margin-bottom: 10px;}
