--- a/css/structure-test.css
+++ b/css/structure-test.css
@@ -4,9 +4,12 @@ body,ul,h2,h3,h4,form,input,textarea,select{padding:0;margin:0;}
 li{list-style:none;}
 img{border:none;}
 a{text-decoration:none;}
-a.hover{text-decoration:underline;}
 a:focus {  outline:none;   -moz-outline:none;}
 *:focus { outline: none; }
+@font-face{
+	font-family:"HYZHONGXIUTIJ";
+	src:url("../font/HYZHONGXIUTIJ.TTF")
+}
 html{
 	width: 100%;
 	height: 100%;
@@ -47,6 +50,9 @@ body{
 .title a{
 	/*padding:0 30px;*/width:20%;height:100%;float:left;text-align: center;line-height: 24px;font-size: 24px;color:#5D5D5D;text-decoration: none;position: relative;z-index: 1;
 }
+.title a:hover{
+	text-decoration: none;
+}
 .title .float{
 	width:20%;height:100%;background:#000000;position: absolute;
 }
@@ -63,8 +69,7 @@ body{
 }
 img{
 	vertical-align: middle;
-	width:150px;
-	height:100px;
+	
 }
 .question1{
 	position: absolute;
@@ -80,11 +85,18 @@ img{
 	line-height:34px;
 	padding-left: 170px;
 }
-.question2,.question4,.question5{
+.question2{
 	position: absolute;
 	top:60px;
 	font-size: 20px;
 	padding-left: 90px;
+	
+	}
+.question4,.question5{
+	position: absolute;
+	top:60px;
+	font-size: 20px;
+	padding-left: 120px;
 	
 	}
 	
